--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,50 @@
+/*Responsividade*/
+
+@media (max-width: 475.98px) {
+	
+    div#topo {
+        background: url('../img/setup.jpg') ;
+        background-size: cover;
+        height: 550px;
+    }
+
+    div#textos {
+        background-color: rgb(0, 0, 0, .1);
+        padding: 30px;
+        border-radius: 15px;
+    }
+
+    h2.h2-topo{
+        font-family: 'beach';
+        margin-top: 45px;
+        font-size: 3em; 
+        color: white;
+        text-shadow: 0 0 0.8em cyan;
+    }
+
+    a.a_home_nav {
+        font-size: 1.7em;
+        font-family: beach;
+        color: rgb(255, 255, 255);
+        font-style: italic;
+        text-shadow: 0 0 0.8em cyan;
+    }
+
+}
+
+@media (min-width: 475.99px) and (max-width: 575.98px) {
+
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+
+}
+
+
 /* Formatações gerais  */
 
 @font-face {
