--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,7 +46,13 @@
 		height: 300px;
 	}
 
-
+	p.p-suporte {
+		font-size: 1em;
+		padding: 5px;
+		font-family: one;
+		margin-top: 30px;
+		text-shadow: 0 0 1em purple;
+	}
 
 
 
@@ -83,9 +89,8 @@
 
 body {
 	margin: 0;
-	background-color: black; 
-
-	
+	background-color: black !important; 
+	--bs-body-color: black !important;
 }
 
 /*Topo*/
