--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -1,3 +1,35 @@
+/*Responsividade*/
+
+@media (max-width: 475.98px) {
+	
+    div#home {
+        color: white;
+        position: absolute;
+        top: 90%;
+        left: 45%;
+        background-color: rgb(0, 0, 0, .8);
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 1em cyan;
+        cursor: pointer;
+    
+    }
+   
+
+}
+
+@media (min-width: 475.99px) and (max-width: 575.98px) {
+
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+
+}
+
 body {
     background: url('../img/bg20.jpg') ;
 }
