--- a/public/css/index.css
+++ b/public/css/index.css
@@ -163,7 +163,7 @@ body {
 	background-color: rgb(0, 0, 0, .7);
 	transition: 1s;
 	border-radius: 10px;
-	box-shadow: 5px 5px 1em white;
+	box-shadow: 0 0 1em white;
 }
 
 .img {
@@ -174,6 +174,7 @@ body {
 
 .img:hover, .logo:hover {
 	transform: scale(1.1);
+	padding: 15px;
 }
 
 /*Carousel*/
