--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,7 +5,7 @@
 		background: url('../img/setup.jpg');
 		background-attachment: fixed;
 		background-size: cover;	
-		height: 400px;
+		height: 350px;
 	}
 
 	img.img {
@@ -37,7 +37,100 @@
 	}
 
 	div.img-carousel, div.img-carousel-2 {
-		height: 450px;
+		height: 380px;
+	}
+
+	section#carousel {
+		border: 7px double cyan;
+		border-left: none;
+		border-right: none;
+		box-shadow: none;		
+	}
+
+	iframe.video {
+		height: 200px;
+	}
+
+	p.p-suporte {
+		font-size: 1.2em;
+		padding: 5px;
+		font-family: one;
+		margin-top: 30px;
+		text-shadow: 0 0 1em purple;
+	}
+
+	ul.nav-rodape {
+		flex-direction: row !important;
+		justify-content: center !important;
+	}
+
+	li.nav-item {
+		padding: 10px !important;
+	}
+
+	h2.h2-duvida {
+		font-size: 3em;
+		color: lightgray;
+		font-family: beach;
+	}
+	
+	h3.h3-duvida {
+		font-size: 2em;
+		color: lightgray;
+		font-family: beach;
+	}
+
+
+
+}
+
+@media (min-width: 475.99px) and (max-width: 575.98px) {
+	h2.h2-carousel {
+		font-size: 2em;
+		font-weight: bolder;
+		font-family: beach;
+		text-shadow: 0 0 0.8em cyan;
+	}
+
+	ul.nav-rodape {
+		flex-direction: row !important;
+		justify-content: center !important;
+	}
+
+	li.nav-item {
+		padding: 10px !important;
+	}
+
+	div.fundo-logo {
+		background: url('../img/setup.jpg');
+		background-attachment: fixed;
+		background-size: cover;	
+		height: 350px;
+	}
+
+	img.img {
+		width: 360px;
+	}
+
+	button.carousel-btn {
+		--bs-btn-font-size: 1rem !important;
+		--bs-btn-font-family: one !important;
+	}
+
+	h3.h3-carousel {
+		font-size: 1.2em;
+		font-weight: 400;
+		font-family: one;
+		text-shadow: 0 0 1em cyan;
+	}
+
+	button.btn-lg {
+		font-size: 1rem !important;
+		font-family: beach;
+	}
+
+	div.img-carousel, div.img-carousel-2 {
+		height: 380px;
 	}
 
 	section#carousel {
@@ -52,32 +145,187 @@
 	}
 
 	p.p-suporte {
-		font-size: 1em;
+		font-size: 1.3em;
 		padding: 5px;
 		font-family: one;
 		margin-top: 30px;
 		text-shadow: 0 0 1em purple;
 	}
 
-
+	h2.h2-duvida {
+		font-size: 3em;
+		color: lightgray;
+		font-family: beach;
+	}
+	
+	h3.h3-duvida {
+		font-size: 2em;
+		color: lightgray;
+		font-family: beach;
+	}
 
 }
 
-@media (min-width: 475.99px) and (max-width: 575.98px) {
+@media (min-width: 576px) and (max-width: 767.98px) {
 	h2.h2-carousel {
-		font-size: 2em;
+		font-size: 3em;
 		font-weight: bolder;
 		font-family: beach;
 		text-shadow: 0 0 0.8em cyan;
 	}
-}
 
-@media (min-width: 576px) and (max-width: 767.98px) {
+	ul.nav-rodape {
+		flex-direction: row !important;
+		justify-content: center !important;
+	}
 
+	li.nav-item {
+		padding: 10px !important;
+	}
+
+	div.fundo-logo {
+		background: url('../img/setup.jpg');
+		background-attachment: fixed;
+		background-size: cover;	
+		height: 350px;
+	}
+
+	img.img {
+		width: 380px;
+	}
+
+	button.carousel-btn {
+		--bs-btn-font-size: 1rem !important;
+		--bs-btn-font-family: one !important;
+	}
+
+	h3.h3-carousel {
+		font-size: 1.6em;
+		font-weight: 400;
+		font-family: one;
+		text-shadow: 0 0 1em cyan;
+	}
+
+	button.btn-lg {
+		font-size: 1rem !important;
+		font-family: beach;
+	}
+
+	div.img-carousel, div.img-carousel-2 {
+		height: 380px;
+	}
+
+	section#carousel {
+		border: 7px double cyan;
+		border-left: none;
+		border-right: none;
+		box-shadow: none;		
+	}
+
+	iframe.video {
+		height: 300px;
+	}
+
+	p.p-suporte {
+		font-size: 1.6em;
+		padding: 5px;
+		font-family: one;
+		margin-top: 30px;
+		text-shadow: 0 0 1em purple;
+	}
+
+	h2.h2-duvida {
+		font-size: 3.2em;
+		color: lightgray;
+		font-family: beach;
+	}
+	
+	h3.h3-duvida {
+		font-size: 2.2em;
+		color: lightgray;
+		font-family: beach;
+	}
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
+	h2.h2-carousel {
+		font-size: 3em;
+		font-weight: bolder;
+		font-family: beach;
+		text-shadow: 0 0 0.8em cyan;
+	}
 
+	ul.nav-rodape {
+		flex-direction: row !important;
+		justify-content: center !important;
+	}
+
+	li.nav-item {
+		padding: 10px !important;
+	}
+
+	div.fundo-logo {
+		background: url('../img/setup.jpg');
+		background-attachment: fixed;
+		background-size: cover;	
+		height: 350px;
+	}
+
+	img.img {
+		width: 480px;
+	}
+
+	button.carousel-btn {
+		--bs-btn-font-size: 1rem !important;
+		--bs-btn-font-family: one !important;
+	}
+
+	h3.h3-carousel {
+		font-size: 1.6em;
+		font-weight: 400;
+		font-family: one;
+		text-shadow: 0 0 1em cyan;
+	}
+
+	button.btn-lg {
+		font-size: 1rem !important;
+		font-family: beach;
+	}
+
+	div.img-carousel, div.img-carousel-2 {
+		height: 380px;
+	}
+
+	section#carousel {
+		border: 7px double cyan;
+		border-left: none;
+		border-right: none;
+		box-shadow: none;		
+	}
+
+	iframe.video {
+		height: 300px;
+	}
+
+	p.p-suporte {
+		font-size: 1.6em;
+		padding: 5px;
+		font-family: one;
+		margin-top: 30px;
+		text-shadow: 0 0 1em purple;
+	}
+
+	h2.h2-duvida {
+		font-size: 3.2em;
+		color: lightgray;
+		font-family: beach;
+	}
+	
+	h3.h3-duvida {
+		font-size: 2.2em;
+		color: lightgray;
+		font-family: beach;
+	}
 }
 
 /*Formatações Gerais*/
@@ -154,7 +402,7 @@ body {
 .fundo-logo {
 	background: url('../img/setup.jpg');
 	background-size: cover;	
-	height: 750px;
+	height: 600px;
 	animation: 2s translatex forwards;
 	
 }
@@ -167,7 +415,7 @@ body {
 }
 
 .img {
-	width: 850px;
+	width: 750px;
 	transition: 1s;
 	animation: 2s opacidade forwards;
 }	
@@ -189,10 +437,8 @@ body {
 
 .img-carousel, .img-carousel-2 {
 	background-size: cover;	
-	height: 800px;
+	height: 630px;
 }
-
-
 
 .carousel-btn {
 	--bs-btn-font-size: 1.8rem !important;
@@ -254,26 +500,17 @@ body {
 /*Suporte*/
 
 #garantia {
-
-	/*border: 2px double cyan;*/
-	/*background-color: rgb(0, 0, 0, .4);*/
-	/*box-shadow: 0 0 1em cyan;*/
 	border: 2px double cyan;
 	border-radius: 20px;
 	margin: 15px;
 	padding: 15px;
-
 }
 
 #duvida {
-	/*box-shadow: 0 0 1em cyan;*/
-	/*background-color: rgb(0, 0, 0, .4);*/
-	/*border: 2px double cyan;*/
 	border: 2px double cyan;
 	border-radius: 20px;
 	margin: 15px;
 	padding: 15px;
-
 }
 
 .h2-duvida {
@@ -301,7 +538,6 @@ body {
 
 .p-suporte {
 	font-size: 1.8em;
-	
 	color: white;
 	font-family: one;
 	margin-top: 30px;
@@ -340,8 +576,8 @@ body {
     background-color: rgb(0, 0, 0, .7);
 }
 
-/*Rodape*/
+/*Sobre nós*/
 
-#rodape {
-	background: url('../img/bg10.jpg');
+.quem-somos {
+	background-image: url('../img/bg10.jpg');
 }
