--- a/public/css/home.css
+++ b/public/css/home.css
@@ -56,11 +56,10 @@
         font-size: 3em;
     }
 
-    .p-montagem {
-        font-size: 2em;
+    p.p-montagem {
+        font-size: 1.4em;
         color: aliceblue;
         font-family: beach;
-        text-shadow: 0 0 1em cyan;
         background-color: rgb(0, 0, 0, .8);
         padding: 10px;
         border-radius: 4px;
@@ -87,14 +86,58 @@
         margin-left: -5%;
         margin-top: -10px;
     }
+
+    h2.h2-montagem {
+        font-family: one;
+        color: aliceblue;
+        text-shadow: 0 0 1em purple;
+        font-size: 3em;
+    }
+
+    p.p-montagem {
+        font-size: 1.6em;
+        color: aliceblue;
+        font-family: beach;
+        background-color: rgb(0, 0, 0, .8);
+        padding: 10px;
+        border-radius: 4px;
+    }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+    h2.h2-montagem {
+        font-family: one;
+        color: aliceblue;
+        text-shadow: 0 0 1em purple;
+        font-size: 3em;
+    }
 
+    p.p-montagem {
+        font-size: 1.6em;
+        color: aliceblue;
+        font-family: beach;
+        background-color: rgb(0, 0, 0, .8);
+        padding: 10px;
+        border-radius: 4px;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
+    h2.h2-montagem {
+        font-family: one;
+        color: aliceblue;
+        text-shadow: 0 0 1em purple;
+        font-size: 3em;
+    }
 
+    p.p-montagem {
+        font-size: 1.6em;
+        color: aliceblue;
+        font-family: beach;
+        background-color: rgb(0, 0, 0, .8);
+        padding: 10px;
+        border-radius: 4px;
+    }
 }
 
 
@@ -195,10 +238,6 @@ a {
     letter-spacing: 1px;
 }
 
-.montagem {
-    /*background-image: linear-gradient(to right, #100325, #5005a4);*/
-      background-image: linear-gradient(to top, #0b0417, #37027d);
-}
 
 .teste {
     background: url('../img/pc3.jpg') ;
@@ -225,7 +264,11 @@ a {
     font-size: 2em;
     color: aliceblue;
     font-family: beach;
-    text-shadow: 0 0 1em cyan;
+}
+
+
+
+.montagem {
     background-color: rgb(0, 0, 0, .8);
     border-radius: 10px;
 }
